--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "tw:build": "tailwindcss build ./public/css/tailwind.css -o ./public/css/main.css",
-    "build": "npm run tw:build"
+    "build": "npm run tw:build",
+    "vercel-build": "npm run tw:build"
   },
   "author": "Wei Song",
   "license": "ISC",
