--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,7 @@
     "builds": [
       {
         "src": "server.js",
-        "use": "@vercel/node",
-        "config": { 
-          "includeFiles": ["dist/**"],
-          "installCommand": "npm install"
-        }
+        "use": "@vercel/node"
       }
     ],
     "routes": [
