--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run tw:build",
     "vercel-build": "npm run tw:build"
   },
-  "author": "Wei Song",
+  "author": "Hasit Patel",
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
